# wandb-content-navigator

./: .gitignore  .replit  README.md  build.sh  config.py  ingest_and_process_reports.py  llm_utils.py  main.py  process_data.py  pyproject.toml  reports_pipeline.ipynb  retriever.py  run.sh  slack_app.py  streamlit_app.py  utils.py
data/: fully_connected_summaries_final.csv  fully_connected_summaries_final_20240226.csv
